Add Update SSL cert GitHub Action (2)

--- a/.github/workflows/mt-update-ssl-cert.yml
+++ b/.github/workflows/mt-update-ssl-cert.yml
@@ -1,8 +1,12 @@
 name: MT update SSL cert
 on:
     workflow_dispatch: # manual
+    push:  # FIXME remove
+        branches: mmathieum # FIXME remove
     schedule:
       - cron: '0 18 2 * *' # Monthly on the 2nd @ 6pm UTC # WEEKLY https://crontab.guru/#0_18_2_*_*
+# gh workflow run mt-update-ssl-cert.yml --ref mmathieum
+# gh run list --workflow=mt-update-ssl-cert.yml
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
     cancel-in-progress: true
