Add Update SSL cert GitHub Action (4)

--- a/.github/workflows/mt-update-ssl-cert.yml
+++ b/.github/workflows/mt-update-ssl-cert.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           source ./commons/commons.sh
           setGitCommitEnabled
+          setGitUser
           echo "MT_GIT_COMMIT_ENABLED=$MT_GIT_COMMIT_ENABLED" >> "$GITHUB_ENV"
       - name: MT fetch latest SSL cert
         run: |
