--- a/.github/workflows/mt-update-ssl-cert.yml
+++ b/.github/workflows/mt-update-ssl-cert.yml
@@ -28,6 +28,15 @@ jobs:
           submodules: true # required to set right token
           token: ${{ secrets.MT_PAT }}
           fetch-depth: 0 # fetch all (not required util release build)
+      - name: MT check out submodules
+        run: ./checkout_submodules.sh
+      - name: MT setup MT_GIT_BRANCH env
+        if: github.event_name != 'pull_request'
+        run: |
+          echo "MT_GIT_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+      - name: MT code sync
+        # if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
+        run: ./commons/code_sync.sh
       - name: MT set is commit enabled
         run: |
           source ./commons/commons.sh
