--- a/.github/workflows/mt-update-ssl-cert.yml
+++ b/.github/workflows/mt-update-ssl-cert.yml
@@ -51,10 +51,10 @@ jobs:
         if: env.MT_GIT_COMMIT_ENABLED == 'true'
         run: |
           git -C commons-android add src/main/res/raw/info_stm_pem
-          git -C commons-android commit -m "CI: Update stm.info SSL cert"
+          git -C commons-android  diff --staged --quiet || git -C commons-android commit -m "CI: Update stm.info SSL cert"
           git -C commons-android push
           git -C app-android add src/main/res/raw/info_stm_api_pem
-          git -C app-android commit -m "CI: Update info.stm.info SSL cert"
+          git -C app-android  diff --staged --quiet || git -C app-android commit -m "CI: Update info.stm.info SSL cert"
           git -C app-android push
         env:
           GITHUB_TOKEN: ${{ secrets.MT_PAT }}
